TRT-588 - Add HyBIG regression test for custom colour map.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -112,27 +112,36 @@
     "non_production_collection = {\n",
     "    'aster_collection': Collection(id='C1256584478-EEDTEST'),\n",
     "    'measures_collection': Collection(id='C1258119317-EEDTEST'),\n",
+    "    'prefire_collection': Collection(id='C1263096190-EEDTEST'),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
     "    'aster_granules': ['G1256584570-EEDTEST'],\n",
     "    'measures_granules': ['G1258119387-EEDTEST'],\n",
+    "    'prefire_granules': ['G1263096192-EEDTEST'],\n",
+    "}\n",
+    "\n",
+    "non_prod_variable_data = {\n",
+    "    'prefire_variable': 'Flx/olr',\n",
     "}\n",
     "\n",
     "collection_data = {\n",
     "    'https://harmony.uat.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.UAT,\n",
     "    },\n",
     "    'https://harmony.sit.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.SIT,\n",
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.LOCAL,\n",
     "    },\n",
     "}\n",
@@ -222,6 +231,7 @@
     "        ]\n",
     "\n",
     "        test_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
+    "\n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
@@ -807,7 +817,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        # Perform the same checks for both tiles:\n",
+    "        # Perform the same checks for all tiles:\n",
     "        for tile_basename, expected_tile_metadata in tile_information:\n",
     "            tile_files = build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
     "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
@@ -821,6 +831,300 @@
     "            )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to tiled PNGs. Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c567bc0e",
+   "metadata": {},
+   "source": [
+    "### Test that demonstrates variable selection for custom colour maps:\n",
+    "\n",
+    "This test will run a request that specifies a variable for HyBIG to use. It is a bit of a quirky way to ensure HyBIG has access to the related URL for a custom colour map. The output should be in colour rather than greyscale.\n",
+    "\n",
+    "PREFIRE granules also cover the whole Earth at sufficient resolution such that HyBIG will create tiled output, so there will be 15 tiles generated (3 rows, 5 columns).\n",
+    "\n",
+    "This test primarily seeks to ensure the values in the output images use the colour map specified in the related URLs of the specified [UMM-Var record](https://cmr.uat.earthdata.nasa.gov/search/variables.umm_json?concept_id=V1270130943-LARC_CLOUD)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "879897b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefire_basename = 'PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00'\n",
+    "\n",
+    "# Define the tile information, so the output for each tile can be tested:\n",
+    "prefire_tile_0_basename = f'{prefire_basename}.r00c00'\n",
+    "prefire_tile_1_basename = f'{prefire_basename}.r00c01'\n",
+    "prefire_tile_2_basename = f'{prefire_basename}.r00c02'\n",
+    "prefire_tile_3_basename = f'{prefire_basename}.r00c03'\n",
+    "prefire_tile_4_basename = f'{prefire_basename}.r00c04'\n",
+    "prefire_tile_5_basename = f'{prefire_basename}.r01c00'\n",
+    "prefire_tile_6_basename = f'{prefire_basename}.r01c01'\n",
+    "prefire_tile_7_basename = f'{prefire_basename}.r01c02'\n",
+    "prefire_tile_8_basename = f'{prefire_basename}.r01c03'\n",
+    "prefire_tile_9_basename = f'{prefire_basename}.r01c04'\n",
+    "prefire_tile_10_basename = f'{prefire_basename}.r02c00'\n",
+    "prefire_tile_11_basename = f'{prefire_basename}.r02c01'\n",
+    "prefire_tile_12_basename = f'{prefire_basename}.r02c02'\n",
+    "prefire_tile_13_basename = f'{prefire_basename}.r02c03'\n",
+    "prefire_tile_14_basename = f'{prefire_basename}.r02c04'\n",
+    "\n",
+    "common_prefire_metadata = {\n",
+    "    'dtype': 'uint8',\n",
+    "    'nodata': None,\n",
+    "    'crs': CRS.from_epsg(4326),\n",
+    "    'width': 4096,\n",
+    "    'height': 4096,\n",
+    "    'driver': 'PNG',\n",
+    "    'count': 1,\n",
+    "}\n",
+    "\n",
+    "expected_prefire_tile_0_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -179.99999997497974,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        89.99999998748987,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_1_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -99.84780125806752,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        89.99999998748987,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_2_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -19.695602541155296,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        89.99999998748987,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_3_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        60.45659617575694,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        89.99999998748987,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_4_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'width': 2013,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        140.60879489266915,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        89.99999998748987,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_5_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -179.99999997497974,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        9.852157841874373,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_6_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -99.84780125806752,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        9.852157841874373,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_7_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -19.695602541155296,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        9.852157841874373,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_8_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        60.45659617575694,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        9.852157841874373,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_9_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'width': 2013,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        140.60879489266915,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        9.852157841874373,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_10_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'height': 1007,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -179.99999997497974,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        -70.29568430374113,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_11_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'height': 1007,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -99.84780125806752,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        -70.29568430374113,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_12_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'height': 1007,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        -19.695602541155296,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        -70.29568430374113,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_13_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'height': 1007,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        60.45659617575694,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        -70.29568430374113,\n",
+    "    ),\n",
+    "}\n",
+    "expected_prefire_tile_14_metadata = {\n",
+    "    **common_prefire_metadata,\n",
+    "    'height': 1007,\n",
+    "    'width': 2013,\n",
+    "    'transform': Affine(\n",
+    "        0.01956840788987115,\n",
+    "        0.0,\n",
+    "        140.60879489266915,\n",
+    "        0.0,\n",
+    "        -0.01956734427383191,\n",
+    "        -70.29568430374113,\n",
+    "    ),\n",
+    "}\n",
+    "\n",
+    "prefire_tile_information = [\n",
+    "    (prefire_tile_0_basename, expected_prefire_tile_0_metadata),\n",
+    "    (prefire_tile_1_basename, expected_prefire_tile_1_metadata),\n",
+    "    (prefire_tile_2_basename, expected_prefire_tile_2_metadata),\n",
+    "    (prefire_tile_3_basename, expected_prefire_tile_3_metadata),\n",
+    "    (prefire_tile_4_basename, expected_prefire_tile_4_metadata),\n",
+    "    (prefire_tile_5_basename, expected_prefire_tile_5_metadata),\n",
+    "    (prefire_tile_6_basename, expected_prefire_tile_6_metadata),\n",
+    "    (prefire_tile_7_basename, expected_prefire_tile_7_metadata),\n",
+    "    (prefire_tile_8_basename, expected_prefire_tile_8_metadata),\n",
+    "    (prefire_tile_9_basename, expected_prefire_tile_9_metadata),\n",
+    "    (prefire_tile_10_basename, expected_prefire_tile_10_metadata),\n",
+    "    (prefire_tile_11_basename, expected_prefire_tile_11_metadata),\n",
+    "    (prefire_tile_12_basename, expected_prefire_tile_12_metadata),\n",
+    "    (prefire_tile_13_basename, expected_prefire_tile_13_metadata),\n",
+    "    (prefire_tile_14_basename, expected_prefire_tile_14_metadata),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980a401b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "\n",
+    "    colour_map_reference_dir = reference_dir / 'colour_map'\n",
+    "\n",
+    "    colour_map_request = Request(\n",
+    "        collection=environment_information['prefire_collection'],\n",
+    "        granule_id=environment_information['prefire_granules'][0],\n",
+    "        variables=[environment_information['prefire_variable']],\n",
+    "        format='image/png',\n",
+    "    )\n",
+    "\n",
+    "    colour_map_job_id = harmony_client.submit(colour_map_request)\n",
+    "    harmony_client.wait_for_processing(colour_map_job_id, show_progress=True)\n",
+    "\n",
+    "    reference_files = build_file_list(prefire_basename, colour_map_reference_dir, 'PNG')\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_colour_map_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                colour_map_job_id, overwrite=True, directory=temp_dir\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "        # Perform the same checks for all tiles:\n",
+    "        for tile_basename, expected_tile_metadata in prefire_tile_information:\n",
+    "            tile_files = build_file_list(tile_basename, colour_map_reference_dir, 'PNG')\n",
+    "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "\n",
+    "            for file_name in tile_test_files:\n",
+    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
+    "            print_success(f'All {tile_basename} test files generated')\n",
+    "            assert_dataset_produced_correct_results(\n",
+    "                tile_test_files[0], expected_tile_metadata, tile_files[0], 'PNG'\n",
+    "            )\n",
+    "\n",
+    "    print_success(\n",
+    "        'Conversion of PREFIRE GeoTIFF to PNG using custom colour map. Success'\n",
+    "    )\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
@@ -843,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
