Cleaning up collection setup.

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -171,10 +171,7 @@
     "    # Environment.PROD: mod02hkm_production_info,\n",
     "}\n",
     "\n",
-    "if harmony_environment in mod02hkm_subsetbandname_env:\n",
-    "    mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env[harmony_environment]\n",
-    "else:\n",
-    "    mod02hkm_subsetbandname_info = None"
+    "mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env.get(harmony_environment)"
    ]
   },
   {
