Pre-commit file change

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -78,7 +78,8 @@
    "source": [
     "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
     "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'http://localhost:3000'"
+    "# harmony_host_url = 'http://localhost:3000'\n",
+    "# harmony_host_url = 'https://harmony.earthdata.nasa.gov'"
    ]
   },
   {
@@ -190,6 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mod02hkm_test = True\n",
+    "\n",
     "if mod02hkm_subsetbandname_info is not None:\n",
     "\n",
     "    mod02hkm_request = Request(\n",
@@ -200,24 +203,38 @@
     "\n",
     "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
     "\n",
-    "    mod02hkm_test = True\n",
-    "\n",
     "    if not compare_data(reference_data['MOD02HKM'], file_indicators['MOD02HKM']):\n",
     "        print_error('MOD02HKM data mismatch.')\n",
     "        mod02hkm_test = False\n",
     "\n",
-    "    remove_results_files()\n",
+    "    remove_results_files()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8abafe2f-2183-43aa-909c-fc845eb8b04a",
+   "metadata": {},
+   "source": [
+    "## Complete Test Suite With Pass/Fail/Skip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2904175-3266-4fe7-9ce1-eb7eaf8423d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subsetbandname_tests = mod02hkm_test\n",
     "\n",
-    "    subsetbandname_tests = mod02hkm_test\n",
-    "\n",
+    "if mod02hkm_subsetbandname_info is not None:\n",
     "    if subsetbandname_tests:\n",
     "        print_success('Subset-Band-Name test suite PASSED.')\n",
     "    else:\n",
     "        raise Exception('Subset-Band-Name test suite FAILED')\n",
-    "\n",
     "else:\n",
     "    print(\n",
-    "        f'Subset-Band-Name is not configured for this environment: \"{harmony_environment}\" - skipping test.'\n",
+    "        f'Subset-Band-Name is not configured for this environment: \"{harmony_environment}\" - skipping tests.'\n",
     "    )"
    ]
   }
