TRT-588 - Rename result files for clarity.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -232,14 +232,14 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "        for file_name in test_files:\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of ASTER Geotiff to PNG Success')\n",
@@ -289,13 +289,13 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'JPEG'\n",
+    "            test_result_files[0], reference_files[0], 'JPEG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
@@ -459,14 +459,14 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to PNG Success')\n",
@@ -511,13 +511,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
+    "\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'JPEG'\n",
+    "            test_result_files[0], reference_files[0], 'JPEG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs Geotiff to JPEG Success')\n",
@@ -573,15 +575,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "        for file_name in test_files:\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to PNG specifying scaleSize. Success')\n",
@@ -632,15 +634,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "        for file_name in test_files:\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success(\n",
@@ -740,16 +742,18 @@
     "\n",
     "        # Perform the same checks for all tiles:\n",
     "        for tile_basename in iceland_tiles:\n",
-    "            tile_files = build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
-    "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "            tile_reference_files = build_file_list(\n",
+    "                tile_basename, tiled_reference_dir, 'PNG'\n",
+    "            )\n",
+    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "            for file_name in tile_test_files:\n",
+    "            for file_name in tile_result_files:\n",
     "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "            print_success(f'All {tile_basename} test files generated')\n",
     "\n",
     "            assert_dataset_produced_correct_results(\n",
-    "                tile_test_files[0], tile_files[0], 'PNG'\n",
+    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
     "            )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to tiled PNGs. Success')\n",
@@ -820,16 +824,18 @@
     "        ]\n",
     "\n",
     "        for tile_basename in prefire_tiles:\n",
-    "            tile_files = build_file_list(tile_basename, colour_map_reference_dir, 'PNG')\n",
-    "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "            tile_reference_files = build_file_list(\n",
+    "                tile_basename, colour_map_reference_dir, 'PNG'\n",
+    "            )\n",
+    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "            for file_name in tile_test_files:\n",
+    "            for file_name in tile_result_files:\n",
     "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "            print_success(f'All {tile_basename} test files generated')\n",
     "\n",
     "            assert_dataset_produced_correct_results(\n",
-    "                tile_test_files[0], tile_files[0], 'PNG'\n",
+    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
     "            )\n",
     "\n",
     "    print_success(\n",
