--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "These tests use MEaSUREs Vegetation Continuous Fields (VCF) Yearly Global 0.05 Deg V001 ([VCF5KYR](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1258119317-EEDTEST)) as GeoTIFF input data to test the HyBIG service against RGB color banded input.\n",
     "\n",
+    "Tests that make comparisons between reference files and the generated test output will compare the array values of the generated PNGs or JPEGs, and also the metadata that `rasterio` retrieves for the file. Some of this metadata is retrieved from the PNG or JPEG itself, such as array dimensions, whilst information such as the CRS and geotransform are retrieved by the accompanying `aux.xml` file that HyBIG also creates for each browse image.\n",
+    "\n",
     "## Set the Harmony environment:\n",
     "\n",
     "The cell below sets the `harmony_host_url` to one of the following valid values:\n",
@@ -112,27 +114,36 @@
     "non_production_collection = {\n",
     "    'aster_collection': Collection(id='C1256584478-EEDTEST'),\n",
     "    'measures_collection': Collection(id='C1258119317-EEDTEST'),\n",
+    "    'prefire_collection': Collection(id='C1263096190-EEDTEST'),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
     "    'aster_granules': ['G1256584570-EEDTEST'],\n",
     "    'measures_granules': ['G1258119387-EEDTEST'],\n",
+    "    'prefire_granules': ['G1263096192-EEDTEST'],\n",
+    "}\n",
+    "\n",
+    "non_prod_variable_data = {\n",
+    "    'prefire_variable': 'Flx/olr',\n",
     "}\n",
     "\n",
     "collection_data = {\n",
     "    'https://harmony.uat.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.UAT,\n",
     "    },\n",
     "    'https://harmony.sit.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.SIT,\n",
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
+    "        **non_prod_variable_data,\n",
     "        'env': Environment.LOCAL,\n",
     "    },\n",
     "}\n",
@@ -186,7 +197,7 @@
     "The output from this test should be constrained to the specified area, in this case that of the ASTER tile, which has approximately the following extent:\n",
     "\n",
     "* 22 ≤ longitude (degrees east) ≤ 23\n",
-    "* 0 ≤ latitude (degrees north) ≤ 1\n"
+    "* 0 ≤ latitude (degrees north) ≤ 1"
    ]
   },
   {
@@ -221,20 +232,14 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
+    "\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_aster_metadata,\n",
-    "            'driver': 'PNG',\n",
-    "            'count': 1,\n",
-    "            'nodata': 255,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of ASTER Geotiff to PNG Success')\n",
@@ -284,19 +289,13 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            'driver': 'JPEG',\n",
-    "            **common_aster_metadata,\n",
-    "            'count': 3,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'JPEG'\n",
+    "            test_result_files[0], reference_files[0], 'JPEG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
@@ -460,20 +459,14 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_measures_metadata,\n",
-    "            'driver': 'PNG',\n",
-    "            'count': 1,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to PNG Success')\n",
@@ -518,20 +511,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
-    "        for file_name in test_files:\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
+    "\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_measures_metadata,\n",
-    "            'driver': 'JPEG',\n",
-    "            'count': 3,\n",
-    "            'nodata': None,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'JPEG'\n",
+    "            test_result_files[0], reference_files[0], 'JPEG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs Geotiff to JPEG Success')\n",
@@ -587,24 +575,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "        for file_name in test_files:\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_measures_metadata,\n",
-    "            'driver': 'PNG',\n",
-    "            'count': 1,\n",
-    "            'transform': Affine(1.0, 0.0, -180.0, 0.0, -2.0, 90.0),\n",
-    "            'height': 90,\n",
-    "            'width': 360,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to PNG specifying scaleSize. Success')\n",
@@ -655,24 +634,15 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "        for file_name in test_files:\n",
+    "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_measures_metadata,\n",
-    "            'driver': 'PNG',\n",
-    "            'count': 1,\n",
-    "            'transform': Affine(2.0, 0.0, -180.0, 0.0, -1.0, 90.0),\n",
-    "            'height': 180,\n",
-    "            'width': 180,\n",
-    "        }\n",
-    "\n",
     "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
     "        )\n",
     "\n",
     "    print_success(\n",
@@ -738,6 +708,14 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
+    "    iceland_tiles = [\n",
+    "        f'{measures_basename}.r00c00',\n",
+    "        f'{measures_basename}.r00c01',\n",
+    "        f'{measures_basename}.r00c02',\n",
+    "        f'{measures_basename}.r00c03',\n",
+    "        f'{measures_basename}.r00c04',\n",
+    "    ]\n",
+    "\n",
     "    iceland_extent = [-30, 60, -10, 70]\n",
     "    iceland_scale_size = [0.001, 0.0029]\n",
     "    tiled_reference_dir = reference_dir / 'tiled'\n",
@@ -754,51 +732,6 @@
     "    tiled_job_id = harmony_client.submit(tiled_request)\n",
     "    harmony_client.wait_for_processing(tiled_job_id, show_progress=True)\n",
     "\n",
-    "    # Define the tile information, so the output for each tile can be tested:\n",
-    "    tile_0_basename = f'{measures_basename}.r00c00'\n",
-    "    tile_1_basename = f'{measures_basename}.r00c01'\n",
-    "    tile_2_basename = f'{measures_basename}.r00c02'\n",
-    "    tile_3_basename = f'{measures_basename}.r00c03'\n",
-    "    tile_4_basename = f'{measures_basename}.r00c04'\n",
-    "\n",
-    "    common_output_metadata = {\n",
-    "        **common_measures_metadata,\n",
-    "        'driver': 'PNG',\n",
-    "        'count': 1,\n",
-    "        'height': 3448,\n",
-    "        'width': 4096,\n",
-    "    }\n",
-    "\n",
-    "    expected_tile_0_metadata = {\n",
-    "        **common_output_metadata,\n",
-    "        'transform': Affine(0.001, 0.0, -30.0, 0.0, -0.002900232018561485, 70.0),\n",
-    "    }\n",
-    "    expected_tile_1_metadata = {\n",
-    "        **common_output_metadata,\n",
-    "        'transform': Affine(0.001, 0.0, -25.904, 0.0, -0.002900232018561485, 70.0),\n",
-    "    }\n",
-    "    expected_tile_2_metadata = {\n",
-    "        **common_output_metadata,\n",
-    "        'transform': Affine(0.001, 0.0, -21.808, 0.0, -0.002900232018561485, 70.0),\n",
-    "    }\n",
-    "    expected_tile_3_metadata = {\n",
-    "        **common_output_metadata,\n",
-    "        'transform': Affine(0.001, 0.0, -17.712, 0.0, -0.002900232018561485, 70.0),\n",
-    "    }\n",
-    "    expected_tile_4_metadata = {\n",
-    "        **common_output_metadata,\n",
-    "        'transform': Affine(0.001, 0.0, -13.616, 0.0, -0.002900232018561485, 70.0),\n",
-    "        'width': 3616,\n",
-    "    }\n",
-    "\n",
-    "    tile_information = [\n",
-    "        (tile_0_basename, expected_tile_0_metadata),\n",
-    "        (tile_1_basename, expected_tile_1_metadata),\n",
-    "        (tile_2_basename, expected_tile_2_metadata),\n",
-    "        (tile_3_basename, expected_tile_3_metadata),\n",
-    "        (tile_4_basename, expected_tile_4_metadata),\n",
-    "    ]\n",
-    "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_tiled_outputs = [\n",
     "            file_future.result()\n",
@@ -807,20 +740,107 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        # Perform the same checks for both tiles:\n",
-    "        for tile_basename, expected_tile_metadata in tile_information:\n",
-    "            tile_files = build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
-    "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "        # Perform the same checks for all tiles:\n",
+    "        for tile_basename in iceland_tiles:\n",
+    "            tile_reference_files = build_file_list(\n",
+    "                tile_basename, tiled_reference_dir, 'PNG'\n",
+    "            )\n",
+    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "            for file_name in tile_test_files:\n",
+    "            for file_name in tile_result_files:\n",
     "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "            print_success(f'All {tile_basename} test files generated')\n",
+    "\n",
     "            assert_dataset_produced_correct_results(\n",
-    "                tile_test_files[0], expected_tile_metadata, tile_files[0], 'PNG'\n",
+    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
     "            )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to tiled PNGs. Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c567bc0e",
+   "metadata": {},
+   "source": [
+    "### Test that demonstrates variable selection for custom colour maps:\n",
+    "\n",
+    "This test will run a request that specifies a variable for HyBIG to use. It is a bit of a quirky way to ensure HyBIG has access to the related URL for a custom colour map. The output should be in colour rather than greyscale.\n",
+    "\n",
+    "PREFIRE granules also cover the whole Earth at sufficient resolution such that HyBIG will create tiled output, so there will be 15 tiles generated (3 rows, 5 columns).\n",
+    "\n",
+    "This test primarily seeks to ensure the values in the output images use the colour map specified in the related URLs of the specified [UMM-Var record](https://cmr.uat.earthdata.nasa.gov/search/variables.umm_json?concept_id=V1270130943-LARC_CLOUD)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980a401b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    prefire_basename = 'PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00'\n",
+    "\n",
+    "    prefire_tiles = [\n",
+    "        f'{prefire_basename}.r00c00',\n",
+    "        f'{prefire_basename}.r00c01',\n",
+    "        f'{prefire_basename}.r00c02',\n",
+    "        f'{prefire_basename}.r00c03',\n",
+    "        f'{prefire_basename}.r00c04',\n",
+    "        f'{prefire_basename}.r01c00',\n",
+    "        f'{prefire_basename}.r01c01',\n",
+    "        f'{prefire_basename}.r01c02',\n",
+    "        f'{prefire_basename}.r01c03',\n",
+    "        f'{prefire_basename}.r01c04',\n",
+    "        f'{prefire_basename}.r02c00',\n",
+    "        f'{prefire_basename}.r02c01',\n",
+    "        f'{prefire_basename}.r02c02',\n",
+    "        f'{prefire_basename}.r02c03',\n",
+    "        f'{prefire_basename}.r02c04',\n",
+    "    ]\n",
+    "\n",
+    "    colour_map_reference_dir = reference_dir / 'colour_map'\n",
+    "\n",
+    "    colour_map_request = Request(\n",
+    "        collection=environment_information['prefire_collection'],\n",
+    "        granule_id=environment_information['prefire_granules'][0],\n",
+    "        variables=[environment_information['prefire_variable']],\n",
+    "        format='image/png',\n",
+    "    )\n",
+    "\n",
+    "    colour_map_job_id = harmony_client.submit(colour_map_request)\n",
+    "    harmony_client.wait_for_processing(colour_map_job_id, show_progress=True)\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_colour_map_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                colour_map_job_id, overwrite=True, directory=temp_dir\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "        for tile_basename in prefire_tiles:\n",
+    "            tile_reference_files = build_file_list(\n",
+    "                tile_basename, colour_map_reference_dir, 'PNG'\n",
+    "            )\n",
+    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "\n",
+    "            for file_name in tile_result_files:\n",
+    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
+    "            print_success(f'All {tile_basename} test files generated')\n",
+    "\n",
+    "            assert_dataset_produced_correct_results(\n",
+    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
+    "            )\n",
+    "\n",
+    "    print_success(\n",
+    "        'Conversion of PREFIRE GeoTIFF to PNG using custom colour map. Success'\n",
+    "    )\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
@@ -843,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
