Removed variable subsetting sentence, added sds_name to the compare_data function call

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -155,7 +155,7 @@
    "id": "722b554f-d69d-45bf-acfe-2ad255f875c0",
    "metadata": {},
    "source": [
-    "These selected collections and granules are only available in UAT environment. To minimize the output, all requests will utilize variable subsetting."
+    "These selected collections and granules are only available in UAT environment."
    ]
   },
   {
@@ -203,7 +203,9 @@
     "\n",
     "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
     "\n",
-    "    if not compare_data(reference_data['MOD02HKM'], file_indicators['MOD02HKM']):\n",
+    "    if not compare_data(\n",
+    "        reference_data['MOD02HKM'], file_indicators['MOD02HKM'], 'EV_250_Aggr500_RefSB'\n",
+    "    ):\n",
     "        print_error('MOD02HKM data mismatch.')\n",
     "        mod02hkm_test = False\n",
     "\n",
