update to use datatree comparison and concatenate=True

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ce7f640",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T17:52:02.432376Z",
-     "start_time": "2024-05-17T17:52:01.930482Z"
+     "end_time": "2024-11-13T19:16:56.881691Z",
+     "start_time": "2024-11-13T19:16:55.207082Z"
     },
     "tags": []
    },
@@ -67,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "45f380c6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T17:53:16.067063Z",
-     "start_time": "2024-05-17T17:53:16.061847Z"
+     "end_time": "2024-11-13T19:17:01.668202Z",
+     "start_time": "2024-11-13T19:17:01.663791Z"
     },
     "tags": [
      "parameters"
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4420bb6e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T17:53:23.137293Z",
-     "start_time": "2024-05-17T17:53:20.917984Z"
+     "end_time": "2024-11-13T19:17:08.213477Z",
+     "start_time": "2024-11-13T19:17:05.311566Z"
     }
    },
    "outputs": [],
@@ -180,19 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d6aaf063-1f3c-4d84-b414-ca80e65ef78b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T17:55:05.307685Z",
-     "start_time": "2024-05-17T17:53:50.692944Z"
+     "end_time": "2024-11-13T19:18:18.977791Z",
+     "start_time": "2024-11-13T19:17:24.118362Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 4901404_C1262899916-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: temp_var_bbox.nc4\n",
+      "SAMBAH temporal, variable, bounding box request: success\n"
+     ]
+    }
+   ],
    "source": [
     "temp_var_bbox_request = Request(\n",
     "    collection=req_info['collection'],\n",
     "    extend=['mirror_step'],\n",
+    "    concatenate=True,\n",
     "    granule_id=req_info['granule_id'],\n",
     "    temporal=req_info['temporal'],\n",
     "    variables=req_info['variables'],\n",
@@ -200,18 +211,13 @@
     ")\n",
     "\n",
     "\n",
-    "temp_var_bbox_filename = 'temp_var_bbox.nc4'\n",
-    "submit_and_download(harmony_client, temp_var_bbox_request, temp_var_bbox_filename)\n",
+    "output_filename = 'temp_var_bbox.nc4'\n",
+    "submit_and_download(harmony_client, temp_var_bbox_request, output_filename)\n",
     "assert exists(\n",
-    "    temp_var_bbox_filename\n",
+    "    output_filename\n",
     "), 'Unsuccessful SAMBAH temporal, variable, bounding box request.'\n",
     "\n",
-    "\n",
-    "compare_results_to_reference_file(temp_var_bbox_filename)\n",
-    "compare_results_to_reference_file(temp_var_bbox_filename, 'product')\n",
-    "# compare_results_to_reference_file(temp_var_bbox_filename, 'geolocation')\n",
-    "compare_results_to_reference_file(temp_var_bbox_filename, 'qa_statistics')\n",
-    "compare_results_to_reference_file(temp_var_bbox_filename, 'support_data')\n",
+    "compare_results_to_reference_file(output_filename)\n",
     "\n",
     "\n",
     "print(\"SAMBAH temporal, variable, bounding box request: success\")"
@@ -227,23 +233,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "90bb3455-f82c-4cd8-93f2-feba79fbed7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 4901438_C1262899916-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: var_only.nc4\n",
+      "SAMBAH variable request: success\n"
+     ]
+    }
+   ],
    "source": [
     "var_only_request = Request(\n",
     "    collection=req_info['collection'],\n",
-    "    extend='mirror_step',\n",
+    "    extend=['mirror_step'],\n",
+    "    concatenate=True,\n",
     "    granule_id=req_info['granule_id'],\n",
     "    variables=req_info['variables'],\n",
     ")\n",
     "\n",
-    "var_only_filename = 'var_only.nc4'\n",
-    "submit_and_download(harmony_client, var_only_request, var_only_filename)\n",
-    "assert exists(var_only_filename), 'Unsuccessful SAMBAH variable request.'\n",
+    "output_filename = 'var_only.nc4'\n",
+    "submit_and_download(harmony_client, var_only_request, output_filename)\n",
+    "assert exists(output_filename), 'Unsuccessful SAMBAH variable request.'\n",
     "\n",
-    "compare_results_to_reference_file(var_only_filename)\n",
+    "compare_results_to_reference_file(output_filename)\n",
     "print(\"SAMBAH variable request: success\")"
    ]
   },
@@ -257,33 +274,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "567d0146-5932-4542-9361-2908c4ce3278",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xr.open_dataset(\"var_only.nc4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4330105a-f9f0-429e-9762-3049f408d635",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 4901458_C1262899916-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: spatial_only.nc4\n",
+      "SAMBAH spatial request: success\n"
+     ]
+    }
+   ],
    "source": [
     "spatial_only_request = Request(\n",
     "    collection=req_info['collection'],\n",
-    "    extend='mirror_step',\n",
+    "    extend=['mirror_step'],\n",
+    "    concatenate=True,\n",
     "    granule_id=req_info['granule_id'],\n",
     "    spatial=req_info['spatial'],\n",
     ")\n",
     "\n",
-    "spatial_only_filename = 'spatial_only.nc4'\n",
-    "submit_and_download(harmony_client, spatial_only_request, spatial_only_filename)\n",
-    "assert exists(spatial_only_filename), 'Unsuccessful SAMBAH temporal request.'\n",
+    "output_filename = 'spatial_only.nc4'\n",
+    "submit_and_download(harmony_client, spatial_only_request, output_filename)\n",
+    "assert exists(output_filename), 'Unsuccessful SAMBAH temporal request.'\n",
     "\n",
-    "compare_results_to_reference_file(spatial_only_filename)\n",
+    "compare_results_to_reference_file(output_filename)\n",
     "print(\"SAMBAH spatial request: success\")"
    ]
   },
@@ -297,24 +315,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c747cfcc-e63a-4858-b406-a4ec87b6acb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 4901463_C1262899916-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: all_data.nc4\n",
+      "SAMBAH temporal, variable, bounding box request: success\n"
+     ]
+    }
+   ],
    "source": [
     "all_data_request = Request(\n",
     "    collection=req_info['collection'],\n",
     "    extend='mirror_step',\n",
+    "    concatenate=True,\n",
     "    granule_id=req_info['granule_id'],\n",
     ")\n",
     "\n",
-    "all_data_filename = 'all_data.nc4'\n",
-    "submit_and_download(harmony_client, all_data_request, all_data_filename)\n",
+    "output_filename = 'all_data.nc4'\n",
+    "submit_and_download(harmony_client, all_data_request, output_filename)\n",
     "assert exists(\n",
-    "    all_data_filename\n",
+    "    output_filename\n",
     "), 'Unsuccessful SAMBAH temporal, variable, bounding box request.'\n",
     "\n",
-    "compare_results_to_reference_file(all_data_filename)\n",
+    "compare_results_to_reference_file(output_filename)\n",
     "print(\"SAMBAH temporal, variable, bounding box request: success\")"
    ]
   },
@@ -328,21 +357,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
    "metadata": {},
    "outputs": [],
    "source": [
     "remove_results_files()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a868b30-52d9-45aa-9359-a14d79548ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "temp-new-env-for-sambah-regression",
+   "display_name": "papermill-sambah",
    "language": "python",
-   "name": "temp-new-env-for-sambah-regression"
+   "name": "papermill-sambah"
   },
   "language_info": {
    "codemirror_mode": {
@@ -354,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.10"
   },
   "name": "SDS_Regression.ipynb"
  },
