clean up imports

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "from harmony import BBox, Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (\n",
+    "from local_utilities import (\n",
     "    compare_results_to_reference_file,\n",
     "    remove_results_files,\n",
     ")"
