update comments and markdown text

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -48,7 +48,7 @@
 =======
     "# Regression test suite for the SAMBAH:\n",
     "\n",
-    "This notebook provides condensed examples of using Harmony to make requests against the SAMBAH service developed to process L2 TEMPO data. \n",
+    "This notebook provides condensed examples of using Harmony to make requests against the [Subsetter And Multi-dimensional Batched Aggregation in Harmony (SAMBAH)](https://stitchee.readthedocs.io/en/latest/sambah_readme/) service developed to process Level 2 data from the [Tropospheric Emissions: Monitoring of Pollution (TEMPO)](https://asdc.larc.nasa.gov/project/TEMPO) instrument. \n",
     "\n",
     "### Features of SAMBAH include:\n",
     "\n",
@@ -599,8 +599,6 @@
    "outputs": [],
    "source": [
     "request_info = {\n",
-    "    # TEMPO NO2 tropospheric, stratospheric, and total columns V03\n",
-    "    # https://cmr.uat.earthdata.nasa.gov/search/concepts/C1262899916-LARC_CLOUD.html\n",
     "    'collection': sambah_info[\"collection\"],\n",
     "    'temporal': {\n",
     "        'start': datetime(2024, 3, 28, 15, 34, 0),\n",
@@ -631,8 +629,6 @@
    "id": "9dd58c71-0232-4a20-9dc4-ef6b3544e797",
    "metadata": {},
    "source": [
-    "## SAMBAH\n",
-    "\n",
     "SAMBAH is currently deployed to Sandbox, SIT, UAT and production.\n",
     "Requests will be made against the TEMPO NO2 L2 V03 collection."
    ]
@@ -644,13 +640,11 @@
    "source": [
     "### SAMBAH: temporal, variable and bounding box subset request\n",
     "\n",
-    "This is a request that exercises the full range of SAMBAH options: temporal, bounding box and variable subsetting.\n",
-    "\n",
-    "Requested variable names:\n",
-    "\n",
-    "* `2024-3-28 15:34:00 < time < 2024-3-28 16:00:00`\n",
-    "* `product/vertical_column_total`\n",
-    "* `BBox(-170,30,-10,40)`"
+    "This is a request that exercises the full range of SAMBAH options: \n",
+    "- time range\n",
+    "- spatial bounding box\n",
+    "- variable subsetting\n",
+    "- concatenating within (i.e., `extend`) and across scans"
    ]
   },
   {
@@ -695,7 +689,11 @@
    "id": "55aca1b5-0dec-4866-952d-b7c016bcf86e",
    "metadata": {},
    "source": [
-    "### SAMBAH: variable subset request, two files"
+    "### SAMBAH: variable subset request, two files\n",
+    "\n",
+    "This is a request that includes:\n",
+    "- variable subsetting\n",
+    "- concatenating two granules within (i.e., `extend`) a scan"
    ]
   },
   {
@@ -733,7 +731,11 @@
    "id": "c8322c1b-7fad-4b87-a46d-abf5f0ee56df",
    "metadata": {},
    "source": [
-    "### SAMBAH: spatial request"
+    "### SAMBAH: spatial request\n",
+    "\n",
+    "This is a request that includes:\n",
+    "- spatial bounding box subsetting\n",
+    "- concatenating granules within (i.e., `extend`) and across scans"
    ]
   },
   {
@@ -771,7 +773,11 @@
    "id": "d0629b4f-1990-42f7-b19d-025e46a96629",
    "metadata": {},
    "source": [
-    "### SAMBAH: no subsetting required, single file\n"
+    "### SAMBAH: no subsetting required, single file\n",
+    "\n",
+    "This is a request that includes:\n",
+    "- a single granule\n",
+    "- no subsetting"
    ]
   },
   {
