--- a/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
+++ b/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
@@ -41,8 +41,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "name": ""
