remove __file__ reference

--- a/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
+++ b/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
@@ -32,7 +32,7 @@
     "    assert output_files[1].suffixes == ['.pgw']\n",
     "    assert output_files[2].suffixes == ['.png', '.aux', '.xml']\n",
     "\n",
-    "    reference_data = Path(__file__).parent / 'reference_data'\n",
+    "    reference_data = Path('reference_data')\n",
     "    assert output_files[0].read_bytes() == (reference_data / 'rgb.png').read_bytes()\n",
     "    assert output_files[1].read_bytes() == (reference_data / 'rgb.pgw').read_bytes()\n",
     "    assert output_files[2].read_bytes() == (reference_data / 'rgb.png.aux.xml').read_bytes()"
